* Fixed bug https://rt.cpan.org/Public/Bug/Display.html?id=45209 :
- Makefile.PL lacked the empty "PL_FILES" directive.

Version 2.48:   ( Tue Apr  7 15:24:55 IDT 2009 )
------------------------------------------------

* Fixed bug https://rt.cpan.org/Ticket/Display.html?id=30402 :
- Trailing comments at the end of the file are not written.
- added a test (t/22trailing-comment-lines.t ) and a test file.

* Reverted the fix to bug #34067 ( "Multiline values returned as array
references in tied hash interface"), as it could potentially break a lot
of old code, and was not such a good idea, and was less preferable from
interface-sanity reasons.

* Documented the old API in regards to bug #34067 - see above.

Version 2.47:   ( Wed Jan 21 11:32:24 IST 2009 )
------------------------------------------------

* Fixed bug https://rt.cpan.org/Ticket/Display.html?id=34067 :
- Multiline values returned as array references in tied hash interface
- This was as opposed to the documentation.
- added t/21multiline-values-in-tied.t and fixed some older tests.

* Moved the eval'ed debugging code (_assert_invariants) to its own module, 
without the eval so the perl-5.6.2 will be happy. Now explicitly use'ing it 
from t/lib where appropriate. See for example:
- http://www.nntp.perl.org/group/perl.cpan.testers/2009/01/msg3101788.html

Version 2.46:  ( Sat Jan 17 16:31:52 IST 2009 )
-----------------------------------------------

* Added regression tests for bug #1720915
- https://sourceforge.net/tracker/index.php?func=detail&aid=1720915&group_id=6926&atid=106926
- the bug seems to be fixed in trunk.

* Added a regression test for RT #36584
- https://rt.cpan.org/Ticket/Display.html?id=36584
- the bug seems to be fixed in trunk.

* Added a regression test for RT #36309
- https://rt.cpan.org/Ticket/Display.html?id=36309
- Testing for allowedcommentchars.
- the bug seems to be fixed in trunk.

* Converted t/03comments.t to Test::More and did other cleanups in preparation 