@@ -29,6 +29,7 @@ t/18non-contiguous-groups.t
 t/19param-found-outside-section.t
 t/20allowedcommentchars.t
 t/22trailing-comment-lines.t
+t/23scalar-ref.t
 t/allowed-comment-chars.ini
 t/array.ini
 t/bad.ini
